<resources>
    <string name="app_name">TestWork</string>
    <string name="special_text">Foodies</string>
    <string name="start_button">Начать</string>
    <string name="rolls">Роллы</string>
    <string name="sushi">Суши</string>
    <string name="sets">Наборы</string>
    <string name="hotdishes">Горячие наборы</string>
    <string name="foodname">Название</string>
    <string name="description">Описание еды</string>
    <string name="button_info">Подробнее</string>
   <string name="button_add">Добавить в корзину</string>
    <string name="button_basket">Корзина</string>
</resources>